--- a/faq.html
+++ b/faq.html
@@ -1,23 +1,24 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
-	<title>FAQ - StudEase.cn</title>
-	
-	<meta charset="utf-8">
-	<meta name="robots" content="index, follow" />
-	<meta name="keywords" content="slicease.js,playease.js,chatease.js,rtmpmate" />
-	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
-	
-	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-	<meta content="yes" name="apple-touch-fullscreen"/>
-	<meta content="telephone=no,email=no" name="format-detection"/>
-	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
-	
-	<link rel="shortcut icon" href="images/favicon.ico">
-	
-	<!--[if lt IE 9]>
+    <title>FAQ - StudEase.cn</title>
+
+    <meta charset="utf-8">
+    <meta name="robots" content="index, follow" />
+    <meta name="keywords" content="slicease.js,playease.js,chatease.js,rtmpmate" />
+    <meta name="description" content="" />
+    <meta name="author" content="Spencer Lau" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
+    <meta content="yes" name="apple-mobile-web-app-capable" />
+    <meta content="yes" name="apple-touch-fullscreen" />
+    <meta content="telephone=no,email=no" name="format-detection" />
+    <meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes" />
+
+    <link rel="shortcut icon" href="images/favicon.ico">
+
+    <!--[if lt IE 9]>
 	<script type='text/javascript'>
 		(function() {
 			if (!/*@cc_on!@*/0) {
@@ -38,194 +39,172 @@
 		}
 	</style>
 	<![endif]-->
-	
-	<link type='text/css' rel='stylesheet' href='css/style.css' />
-	<link type='text/css' rel='stylesheet' href='css/prettify.min.css' />
-	
-	<script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
+
+    <link type='text/css' rel='stylesheet' href='css/style.css' />
+    <link type='text/css' rel='stylesheet' href='css/prettify.min.css' />
+
+    <script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
 </head>
+
 <body ontouchstart=''>
-	<header>
-		<div class='topbar'>
-		<section>
-			<ul class='info'>
-				<li><span class='icon-card'>Name: Tony Lau</span></li>
-				<li><span class='icon-phone'>Phone: +8618224088983</span></li>
-				<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-				<li><span class='icon-address'>Address: Chongqing, China</span></li>
-			</ul>
-		</section>
-		</div>
-		
-		<nav>
-		<section>
-			<span class='logo'>
-				<a href='.' title='studease.cn'>StudEase</a>
-			</span>
-			
-			<div class='menu-toggle'></div>
-			
-			<ul>
-				<li><a href='.'>HOME</a></li>
-				<li><a href='about.html'>ABOUT</a></li>
-				<li><a href='index.html#news'>NEWS</a></li>
-				<li><a href='solutions.html'>SOLUTIONS</a></li>
-				<li>
-					<a href='#'>PROJECTS</a>
-					<ul>
-						<li><a href='rtmpmate.html'>rtmpmate</a></li>
-						<li><a href='playease.html'>playease.js</a></li>
-						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='slicease.html'>slicease.js</a></li>
-					</ul>
-				</li>
-				<li><a href='contact.html'>CONTACT</a></li>
-				<li><a href='blog.html'>BLOG</a></li>
-			</ul>
-		</section>
-		</nav>
-	</header>
-	
-	<div class='wrap'>
-		<div>
-		<section>
-			<p>
-				公众号：STUDEASE<br/>
-				QQ群：528109813
-			</p>
-		</section>
-		</div>
-		
-		<article id='slicease'>
-		<section>
-			<h3>slicease.js</h3>
-			<p>
-				Known Issues and Planned Features: 
-			</p>
-			<ul class='u5 square'>
-				<li>
-					<a>Q: </a>Self-adaption and resize feature.<br/>
-				</li>
-				<li>
-					<a>Q: </a>Control component, & reversed rolling.<br/>
-					<a>A: </a>Fixed in version 3.0.07.<i> - Jul. 27 2017</i>
-				</li>
-			</ul>
-		</section>
-		</article>
-		
-		<article id='chatease'>
-		<section>
-			<h3>chatease.js</h3>
-			<p>
-				Known Issues and Planned Features: 
-			</p>
-			<ul class='u5 square'>
-				<li>
-					<a>Q: </a>Couldn't establish connection in IE8/9.<br/>
-					<a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while websocket is not supported by IE8/9 natively.
-				</li>
-				<li>
-					<a>Q: </a>Nickname format error in some version of IE10/11.<br/>
-				</li>
-			</ul>
-		</section>
-		</article>
-		
-		<article id='playease'>
-		<section>
-			<h3>playease.js</h3>
-			<p>
-				Known Issues and Planned Features: 
-			</p>
-			<ul class='u5 square'>
-				<li>
-					<a>Q: </a>"Player is not ready yet!"<br/>
-					<a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while video tag is not supported by IE8 natively.
-				</li>
-				<li>
-					<a>Q: </a>Buffer control in "flv" and "wss" renders.<br/>
-					<a>A: </a>Done in version 1.0.65.<i> - Jun. 29 2017</i>
-				</li>
-				<li>
-					<a>Q: </a>Added support for Firefox and Edge of "flv" render.<br/>
-					<a>A: </a>Done in version 1.0.67.<i> - Jul. 5 2017</i>
-				</li>
-				<li>
-					<a>Q: </a>Added more UI components, e.g. display, logo, tooltip. And support to multi-quality.<br/>
-					<a>A: </a>Done in version 1.0.72.<i> - Jul. 12 2017</i>
-				</li>
-				<li>
-					<a>Q: </a>Context menu component.<br/>
-					<a>A: </a>Done in version 1.0.75.<i> - Jul. 14 2017</i>
-				</li>
-				<li>
-					<a>Q: </a>New feature: MPEG-DASH.<br/>
-					<a>A: </a>Done in version 1.0.81.<i> - Aug. 10 2017</i>
-				</li>
-				<li>
-					<a>Q: </a>Failed to addSourceBuffer for video/audio, especially on Edge.<br/>
-					<a>A: </a>Fixed in version 1.0.82.<i> - Aug. 11 2017</i>
-				</li>
-			</ul>
-		</section>
-		</article>
-		
-		<article id='rtmpmate'>
-		<section>
-			<h3>rtmpmate</h3>
-			<p>
-				Known Issues and Planned Features: 
-			</p>
-			<ul class='u5 square'>
-				<li>
-					<a>Q: </a>Backstage Management System.<br/>
-				</li>
-			</ul>
-		</section>
-		</article>
-	</div>
-	
-	<footer>
-		<div class='footerall'>
-		<section>
-			<ul>
-				<li class='current'>
-					<a href='faq.html' target='_blank'>
-						<strong>FAQ</strong>
-						<span>Check for the articles<br/>and known issues</span>
-					</a>
-				</li>
-				<li>
-					<a href='solutions.html' target='_blank'>
-						<strong>SOLUTIONS</strong>
-						<span>Low latency and<br/>cross-platform</span>
-					</a>
-				</li>
-				<li>
-					<a href='contact.html' target='_blank'>
-						<strong>CONTACT</strong>
-						<span>+8618224088983<br/>670292548@qq.com</span>
-					</a>
-				</li>
-				<li>
-					<a href='donate.html' target='_blank'>
-						<strong>DONATE</strong>
-						<span>Contribute by<br/>making a donation ￥</span>
-					</a>
-				</li>
-			</ul>
-		</section>
-		</div>
-		
-		<div class='copyright'>
-		<section>
-			<span>Copyright &copy; 2014-2018 studease.cn | All Rights Reserved</span>
-		</section>
-		</div>
-	</footer>
-	
-	<script type='text/javascript'>
-		
-	</script>
+    <header>
+        <div class='topbar'>
+            <section>
+                <ul class='info'>
+                    <li><span class='icon-card'>Name: Spencer Lau</span></li>
+                    <li><span class='icon-phone'>Phone: +8618224088983</span></li>
+                    <li><span class='icon-email'>Email: 670292548@qq.com</span></li>
+                    <li><span class='icon-address'>Address: Guangzhou, China</span></li>
+                </ul>
+            </section>
+        </div>
+
+        <nav>
+            <section>
+                <span class='logo'>
+                    <a href='.' title='studease.cn'>StudEase</a>
+                </span>
+
+                <div class='menu-toggle'></div>
+
+                <ul>
+                    <li><a href='.'>HOME</a></li>
+                    <li><a href='about.html'>ABOUT</a></li>
+                    <li><a href='index.html#news'>NEWS</a></li>
+                    <li><a href='solutions.html'>SOLUTIONS</a></li>
+                    <li>
+                        <a href='#'>PROJECTS</a>
+                        <ul>
+                            <li><a href='rtmpmate.html'>rtmpmate</a></li>
+                            <li><a href='playease.html'>playease.js</a></li>
+                            <li><a href='chatease.html'>chatease.js</a></li>
+                            <li><a href='slicease.html'>slicease.js</a></li>
+                        </ul>
+                    </li>
+                    <li><a href='contact.html'>CONTACT</a></li>
+                    <li><a href='blog.html'>BLOG</a></li>
+                </ul>
+            </section>
+        </nav>
+    </header>
+
+    <div class='wrap'>
+        <div>
+            <section>
+                <p>
+                    公众号：STUDEASE<br />
+                    QQ群：528109813<br />
+                    Skype: live:670292548
+                </p>
+            </section>
+        </div>
+
+        <article id='playease'>
+            <section>
+                <h3>playease.js</h3>
+                <p>
+                    Known Issues and Planned Features:
+                </p>
+                <ul class='u5 square'>
+                    <li>
+                        <a>Q: </a>SecurityError: The operation is insecure.<br />
+                        <a>A: </a>Please contact us for license details.
+                    </li>
+                </ul>
+            </section>
+        </article>
+
+        <article id='rtmpmate'>
+            <section>
+                <h3>rtmpmate</h3>
+                <p>
+                    Known Issues and Planned Features:
+                </p>
+                <ul class='u5 square'>
+                    <li>
+                        <a>Q: </a>Backstage Management System.<br />
+                    </li>
+                </ul>
+            </section>
+        </article>
+
+        <article id='chatease'>
+            <section>
+                <h3>chatease.js</h3>
+                <p>
+                    Known Issues and Planned Features:
+                </p>
+                <ul class='u5 square'>
+                    <li>
+                        <a>Q: </a>Couldn't establish connection in IE8/9.<br />
+                        <a>A: </a>Make sure that flash is installed and the URL of swf is specified correctly, while websocket is not supported by IE8/9 natively.
+                    </li>
+                    <li>
+                        <a>Q: </a>Nickname format error in some version of IE10/11.<br />
+                    </li>
+                </ul>
+            </section>
+        </article>
+
+        <article id='slicease'>
+            <section>
+                <h3>slicease.js</h3>
+                <p>
+                    Known Issues and Planned Features:
+                </p>
+                <ul class='u5 square'>
+                    <li>
+                        <a>Q: </a>Self-adaption and resize feature.<br />
+                    </li>
+                    <li>
+                        <a>Q: </a>Control component, & reversed rolling.<br />
+                        <a>A: </a>Fixed in version 3.0.07.<i> - Jul. 27 2017</i>
+                    </li>
+                </ul>
+            </section>
+        </article>
+    </div>
+
+    <footer>
+        <div class='footerall'>
+            <section>
+                <ul>
+                    <li class='current'>
+                        <a href='faq.html' target='_blank'>
+                            <strong>FAQ</strong>
+                            <span>Check for the articles<br />and known issues</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='solutions.html' target='_blank'>
+                            <strong>SOLUTIONS</strong>
+                            <span>Low latency and<br />cross-platform</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='contact.html' target='_blank'>
+                            <strong>CONTACT</strong>
+                            <span>+8618224088983<br />670292548@qq.com</span>
+                        </a>
+                    </li>
+                    <li>
+                        <a href='donate.html' target='_blank'>
+                            <strong>DONATE</strong>
+                            <span>Contribute by<br />making a donation ￥</span>
+                        </a>
+                    </li>
+                </ul>
+            </section>
+        </div>
+
+        <div class='copyright'>
+            <section>
+                <span>Copyright &copy; 2014-2021 studease.cn | All Rights Reserved</span>
+            </section>
+        </div>
+    </footer>
+
+    <script type='text/javascript'>
+
+    </script>
 </body>
