--- a/solutions-mobile.html
+++ b/solutions-mobile.html
@@ -8,7 +8,7 @@
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="playease.js,chatease.js,rtmpmate,微信直播,弹幕直播" />
 	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
+	<meta name="author" content="Spencer Lau" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta content="yes" name="apple-mobile-web-app-capable" />
