--- a/about.html
+++ b/about.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
 	<title>About - StudEase.cn</title>
-	
+
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="slicease.js,playease.js,chatease.js,rtmpmate" />
 	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
-	
+	<meta name="author" content="Spencer Lau" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-	<meta content="yes" name="apple-touch-fullscreen"/>
-	<meta content="telephone=no,email=no" name="format-detection"/>
-	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
-	
+	<meta content="yes" name="apple-mobile-web-app-capable" />
+	<meta content="yes" name="apple-touch-fullscreen" />
+	<meta content="telephone=no,email=no" name="format-detection" />
+	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes" />
+
 	<link rel="shortcut icon" href="images/favicon.ico">
-	
+
 	<!--[if lt IE 9]>
 	<script type='text/javascript'>
 		(function() {
@@ -38,105 +39,111 @@
 		}
 	</style>
 	<![endif]-->
-	
+
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 </head>
+
 <body ontouchstart=''>
 	<header>
 		<div class='topbar'>
-		<section>
-			<ul class='info'>
-				<li><span class='icon-card'>Name: Tony Lau</span></li>
-				<li><span class='icon-phone'>Phone: +8618224088983</span></li>
-				<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-				<li><span class='icon-address'>Address: Chongqing, China</span></li>
-			</ul>
-		</section>
+			<section>
+				<ul class='info'>
+					<li><span class='icon-card'>Name: Spencer Lau</span></li>
+					<li><span class='icon-phone'>Phone: +8618224088983</span></li>
+					<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
+					<li><span class='icon-address'>Address: Guangzhou, China</span></li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<nav>
-		<section>
-			<span class='logo'>
-				<a href='.' title='studease.cn'>StudEase</a>
-			</span>
-			
-			<div class='menu-toggle'></div>
-			
-			<ul>
-				<li><a href='.'>HOME</a></li>
-				<li class='current'><a href='about.html'>ABOUT</a></li>
-				<li><a href='index.html#news'>NEWS</a></li>
-				<li><a href='solutions.html'>SOLUTIONS</a></li>
-				<li>
-					<a href='#'>PROJECTS</a>
-					<ul>
-						<li><a href='rtmpmate.html'>rtmpmate</a></li>
-						<li><a href='playease.html'>playease.js</a></li>
-						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='slicease.html'>slicease.js</a></li>
-					</ul>
-				</li>
-				<li><a href='contact.html'>CONTACT</a></li>
-				<li><a href='blog.html'>BLOG</a></li>
-			</ul>
-		</section>
+			<section>
+				<span class='logo'>
+					<a href='.' title='studease.cn'>StudEase</a>
+				</span>
+
+				<div class='menu-toggle'></div>
+
+				<ul>
+					<li><a href='.'>HOME</a></li>
+					<li class='current'><a href='about.html'>ABOUT</a></li>
+					<li><a href='index.html#news'>NEWS</a></li>
+					<li><a href='solutions.html'>SOLUTIONS</a></li>
+					<li>
+						<a href='#'>PROJECTS</a>
+						<ul>
+							<li><a href='rtmpmate.html'>rtmpmate</a></li>
+							<li><a href='playease.html'>playease.js</a></li>
+							<li><a href='chatease.html'>chatease.js</a></li>
+							<li><a href='slicease.html'>slicease.js</a></li>
+						</ul>
+					</li>
+					<li><a href='contact.html'>CONTACT</a></li>
+					<li><a href='blog.html'>BLOG</a></li>
+				</ul>
+			</section>
 		</nav>
 	</header>
-	
+
 	<div class='wrap'>
 		<div class='center'>
-		<section>
-			<p>
-				公众号：STUDEASE<br/>
-				QQ群：528109813<br/>
-				Skype: live:670292548
-			</p>
-			
-			<p>"We love working on programmer. It feels like a puzzle and that we're both creating and solving at the same time."</p>
-		</section>
+			<section>
+				<p>
+					公众号：STUDEASE<br />
+					QQ群：528109813<br />
+					Skype: live:670292548
+				</p>
+
+				<ul class='u5 square'>
+					<li>Almost 10 years' experience in media, especially live streaming.</li>
+					<li>High-performance and running 24/7.</li>
+					<li>Professional features and in-depth customization.</li>
+					<li>Graceful framework/code and tiny package.</li>
+				</ul>
+			</section>
 		</div>
 	</div>
-	
+
 	<footer>
 		<div class='footerall'>
-		<section>
-			<ul>
-				<li>
-					<a href='faq.html' target='_blank'>
-						<strong>FAQ</strong>
-						<span>Check for the articles<br/>and known issues</span>
-					</a>
-				</li>
-				<li>
-					<a href='solutions.html' target='_blank'>
-						<strong>SOLUTIONS</strong>
-						<span>Low latency and<br/>cross-platform</span>
-					</a>
-				</li>
-				<li>
-					<a href='contact.html' target='_blank'>
-						<strong>CONTACT</strong>
-						<span>+8618224088983<br/>670292548@qq.com</span>
-					</a>
-				</li>
-				<li>
-					<a href='donate.html' target='_blank'>
-						<strong>DONATE</strong>
-						<span>Contribute by<br/>making a donation ￥</span>
-					</a>
-				</li>
-			</ul>
-		</section>
+			<section>
+				<ul>
+					<li>
+						<a href='faq.html' target='_blank'>
+							<strong>FAQ</strong>
+							<span>Check for the articles<br />and known issues</span>
+						</a>
+					</li>
+					<li>
+						<a href='solutions.html' target='_blank'>
+							<strong>SOLUTIONS</strong>
+							<span>Low latency and<br />cross-platform</span>
+						</a>
+					</li>
+					<li>
+						<a href='contact.html' target='_blank'>
+							<strong>CONTACT</strong>
+							<span>+8618224088983<br />670292548@qq.com</span>
+						</a>
+					</li>
+					<li>
+						<a href='donate.html' target='_blank'>
+							<strong>DONATE</strong>
+							<span>Contribute by<br />making a donation ￥</span>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<div class='copyright'>
-		<section>
-			<span>Copyright &copy; 2014-2018 studease.cn | All Rights Reserved</span>
-		</section>
+			<section>
+				<span>Copyright &copy; 2014-2021 studease.cn | All Rights Reserved</span>
+			</section>
 		</div>
 	</footer>
-	
+
 	<script type='text/javascript'>
-		
+
 	</script>
 </body>
