--- a/chatease.html
+++ b/chatease.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
 	<title>chatease.js - StudEase.cn</title>
-	
+
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="chatease.js,websocket,chat room,聊天室,ie8,ie9" />
 	<meta name="description" content="This is a client-side script for websocket chat." />
-	<meta name="author" content="Tony Lau" />
-	
+	<meta name="author" content="Spencer Lau" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-	<meta content="yes" name="apple-touch-fullscreen"/>
-	<meta content="telephone=no,email=no" name="format-detection"/>
-	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
-	
+	<meta content="yes" name="apple-mobile-web-app-capable" />
+	<meta content="yes" name="apple-touch-fullscreen" />
+	<meta content="telephone=no,email=no" name="format-detection" />
+	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes" />
+
 	<link rel="shortcut icon" href="images/favicon.ico">
-	
+
 	<!--[if lt IE 9]>
 	<script type='text/javascript'>
 		(function() {
@@ -38,104 +39,105 @@
 		}
 	</style>
 	<![endif]-->
-	
+
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	<link type='text/css' rel='stylesheet' href='css/prettify.min.css' />
-	
+
 	<script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
 	<script type='text/javascript' src='js/bscroll.min.js'></script>
 	<script type='text/javascript' src='js/chatease.min.js'></script>
 </head>
+
 <body ontouchstart=''>
 	<header>
 		<div class='topbar'>
-		<section>
-			<ul class='info'>
-				<li><span class='icon-card'>Name: Tony Lau</span></li>
-				<li><span class='icon-phone'>Phone: +8618224088983</span></li>
-				<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-				<li><span class='icon-address'>Address: Chongqing, China</span></li>
-			</ul>
-		</section>
+			<section>
+				<ul class='info'>
+					<li><span class='icon-card'>Name: Spencer Lau</span></li>
+					<li><span class='icon-phone'>Phone: +8618224088983</span></li>
+					<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
+					<li><span class='icon-address'>Address: Guangzhou, China</span></li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<nav>
-		<section>
-			<span class='logo'>
-				<a href='.' title='studease.cn'>StudEase</a>
-			</span>
-			
-			<div class='menu-toggle'></div>
-			
-			<ul>
-				<li><a href='.'>HOME</a></li>
-				<li><a href='about.html'>ABOUT</a></li>
-				<li><a href='index.html#news'>NEWS</a></li>
-				<li><a href='solutions.html'>SOLUTIONS</a></li>
-				<li class='current'>
-					<a href='#'>PROJECTS</a>
-					<ul>
-						<li><a href='rtmpmate.html'>rtmpmate</a></li>
-						<li><a href='playease.html'>playease.js</a></li>
-						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='slicease.html'>slicease.js</a></li>
-					</ul>
-				</li>
-				<li><a href='contact.html'>CONTACT</a></li>
-				<li><a href='blog.html'>BLOG</a></li>
-			</ul>
-		</section>
+			<section>
+				<span class='logo'>
+					<a href='.' title='studease.cn'>StudEase</a>
+				</span>
+
+				<div class='menu-toggle'></div>
+
+				<ul>
+					<li><a href='.'>HOME</a></li>
+					<li><a href='about.html'>ABOUT</a></li>
+					<li><a href='index.html#news'>NEWS</a></li>
+					<li><a href='solutions.html'>SOLUTIONS</a></li>
+					<li class='current'>
+						<a href='#'>PROJECTS</a>
+						<ul>
+							<li><a href='rtmpmate.html'>rtmpmate</a></li>
+							<li><a href='playease.html'>playease.js</a></li>
+							<li><a href='chatease.html'>chatease.js</a></li>
+							<li><a href='slicease.html'>slicease.js</a></li>
+						</ul>
+					</li>
+					<li><a href='contact.html'>CONTACT</a></li>
+					<li><a href='blog.html'>BLOG</a></li>
+				</ul>
+			</section>
 		</nav>
 	</header>
-	
+
 	<div class='wrap'>
 		<div>
-		<section>
-			<h2>chatease.js</h2>
-			<p>
-				[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br/>
-				公众号：STUDEASE<br/>
-				QQ群：528109813<br/>
-				Skype: live:670292548
-			</p>
-			
-			<p>
-				This is a client-side script for websocket chat.
-			</p>
-			
-			<h3>News</h3>
-			<ul class='u5 square'>
-				<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
-				<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
-				<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
-			</ul>
-			
-			<h3>Tested</h3>
-			<ul class='u5 square'>
-				<li>Chrome</li>
-				<li>Firefox</li>
-				<li>Opera</li>
-				<li>Safari</li>
-				<li>IE10-11, Edge</li>
-				<li>IE7-9 (Flash is needed.)</li>
-			</ul>
-			
-			<h3>Example</h3>
-			<div class='ol-status' style='width: 100%; max-width: 640px;'>
-				<label>Online: </label>
-				<span id='ol-users'>0</span>
-			</div>
-			<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
-				<div id='chat'></div>
-			</div>
-			
-			<p style='margin-top: 40px;'>
-				The example below will find the element with an id of "chatwrap" and render a dialog into it.
-			</p>
+			<section>
+				<h2>chatease.js</h2>
+				<p>
+					[source] <a href='https://github.com/studease/chatease' target='_blank'>https://github.com/studease/chatease</a><br />
+					[中文] <a href='http://blog.csdn.net/icysky1989/article/details/52138527' target='_blank'>http://blog.csdn.net/icysky1989/article/details/52138527</a><br />
+					公众号：STUDEASE<br />
+					QQ群：528109813<br />
+					Skype: live:670292548
+				</p>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<p>
+					This is a client-side script for websocket chat.
+				</p>
+
+				<h3>News</h3>
+				<ul class='u5 square'>
+					<li>Added support for MSIE 8 & 9 of <a href='chatease.html'>chatease.js</a>, using flash.<i> - May 12, 2017</i></li>
+					<li>First stable version for websocket chat released: chatease.js 1.0.05, chatease-server 1.0.14.<i> - Apr. 13, 2017</i></li>
+					<li><a href='chatease.html'>Chatease.js</a>, a client-side script for websocket chat, beta released.<i> - Aug. 1, 2016</i></li>
+				</ul>
+
+				<h3>Tested</h3>
+				<ul class='u5 square'>
+					<li>Chrome</li>
+					<li>Firefox</li>
+					<li>Opera</li>
+					<li>Safari</li>
+					<li>IE10-11, Edge</li>
+					<li>IE7-9 (Flash is needed.)</li>
+				</ul>
+
+				<h3>Example</h3>
+				<div class='ol-status' style='width: 100%; max-width: 640px;'>
+					<label>Online: </label>
+					<span id='ol-users'>0</span>
+				</div>
+				<div id='chatwrap' style='width: 100%; max-width: 640px; height: 400px;'>
+					<div id='chat'></div>
+				</div>
+
+				<p style='margin-top: 40px;'>
+					The example below will find the element with an id of "chatwrap" and render a dialog into it.
+				</p>
+
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 &lt;div class='ol-status' style='width: 100%; max-width: 640px;'&gt;
 	&lt;label&gt;Online: &lt;/label&gt;
 	&lt;span id='ol-users'&gt;0&lt;/span&gt;
@@ -165,14 +167,14 @@ function onClose(e) {
 	users.innerText = 0;
 }
 </pre>
-<br/>
+				<br />
 
-			<p>
-				For more configurations, please check cn/studease/embed/chatease.embed.config.js.
-			</p>
+				<p>
+					For more configurations, please check cn/studease/embed/chatease.embed.config.js.
+				</p>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 _defaults = {
     url: 'ws://' + window.location.host + '/ch1?token=123456',
     width: 640,
@@ -193,12 +195,12 @@ _defaults = {
     }
 }
 </pre>
-<br/>
+				<br />
 
-			<h3>Add Callbacks</h3>
+				<h3>Add Callbacks</h3>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 var chat = chatease('chatwrap').setup({
     ...
     events: {
@@ -222,14 +224,14 @@ function onReady(e) {
     console.log('onReady');
 }
 </pre>
-<br/>
+				<br />
 
-			<p>
-				For more events, please check cn/studease/api/chatease.api.js.
-			</p>
+				<p>
+					For more events, please check cn/studease/api/chatease.api.js.
+				</p>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 _eventMapping = {
     onError: events.ERROR,
     onReady: events.CHATEASE_READY,
@@ -243,87 +245,87 @@ _eventMapping = {
     onClose: events.CHATEASE_CLOSE
 }
 </pre>
-<br/>
+				<br />
 
-			<h3>Interfaces</h3>
-			<ul class='u5 square'>
-				<li>
-					<a>send(data)</a>
-					<div>
-						data: An object which will be sent in json format.
-					</div>
-				</li>
-				<li>
-					<a>resize(width, height)</a>
-					<div>
-						width: Width in px.</br>
-						height: Height in px.
-					</div>
-				</li>
-			</ul>
-			
-			<h3>Server</h3>
-			<div>
-				1.0 <a href='https://github.com/studease/kiwichatd' target='_blank'>kiwichatd</a></br>
-				1.1 <a href='rtmpmate.html' target='_blank'>rtmpmate</a>
-			</div>
-			
-			<h3>Software License</h3>
-			<ul class='u5 square'>
-				<li><a href='https://github.com/studease/chatease/blob/master/LICENSE' target='_blank'>BSD 3-Clause License</a></li>
-				<li><a href='https://github.com/studease/chatease/blob/master/NOTICE' target='_blank'>NOTICE</a></li>
-			</ul>
-		</section>
+				<h3>Interfaces</h3>
+				<ul class='u5 square'>
+					<li>
+						<a>send(data)</a>
+						<div>
+							data: An object which will be sent in json format.
+						</div>
+					</li>
+					<li>
+						<a>resize(width, height)</a>
+						<div>
+							width: Width in px.</br>
+							height: Height in px.
+						</div>
+					</li>
+				</ul>
+
+				<h3>Server</h3>
+				<div>
+					1.0 <a href='https://github.com/studease/kiwichatd' target='_blank'>kiwichatd</a></br>
+					1.1 <a href='rtmpmate.html' target='_blank'>rtmpmate</a>
+				</div>
+
+				<h3>Software License</h3>
+				<ul class='u5 square'>
+					<li><a href='https://github.com/studease/chatease/blob/master/LICENSE' target='_blank'>BSD 3-Clause License</a></li>
+					<li><a href='https://github.com/studease/chatease/blob/master/NOTICE' target='_blank'>NOTICE</a></li>
+				</ul>
+			</section>
 		</div>
 	</div>
-	
+
 	<footer>
 		<div class='footerall'>
-		<section>
-			<ul>
-				<li>
-					<a href='faq.html' target='_blank'>
-						<strong>FAQ</strong>
-						<span>Check for the articles<br/>and known issues</span>
-					</a>
-				</li>
-				<li>
-					<a href='solutions.html' target='_blank'>
-						<strong>SOLUTIONS</strong>
-						<span>Low latency and<br/>cross-platform</span>
-					</a>
-				</li>
-				<li>
-					<a href='contact.html' target='_blank'>
-						<strong>CONTACT</strong>
-						<span>+8618224088983<br/>670292548@qq.com</span>
-					</a>
-				</li>
-				<li>
-					<a href='donate.html' target='_blank'>
-						<strong>DONATE</strong>
-						<span>Contribute by<br/>making a donation ￥</span>
-					</a>
-				</li>
-			</ul>
-		</section>
+			<section>
+				<ul>
+					<li>
+						<a href='faq.html' target='_blank'>
+							<strong>FAQ</strong>
+							<span>Check for the articles<br />and known issues</span>
+						</a>
+					</li>
+					<li>
+						<a href='solutions.html' target='_blank'>
+							<strong>SOLUTIONS</strong>
+							<span>Low latency and<br />cross-platform</span>
+						</a>
+					</li>
+					<li>
+						<a href='contact.html' target='_blank'>
+							<strong>CONTACT</strong>
+							<span>+8618224088983<br />670292548@qq.com</span>
+						</a>
+					</li>
+					<li>
+						<a href='donate.html' target='_blank'>
+							<strong>DONATE</strong>
+							<span>Contribute by<br />making a donation ￥</span>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<div class='copyright'>
-		<section>
-			<span>Copyright &copy; 2014-2018 studease.cn | All Rights Reserved</span>
-		</section>
+			<section>
+				<span>Copyright &copy; 2014-2021 studease.cn | All Rights Reserved</span>
+			</section>
 		</div>
 	</footer>
-	
+
 	<script type='text/javascript'>
-		window.onload = function() {
+		window.onload = function () {
 			prettyPrint();
 		};
-		
+
 		var users = document.getElementById('ol-users');
 		var events = chatease.events;
-		
+
 		var chat = chatease('chat');
 		chat.addEventListener(events.CHATEASE_INFO, onInfo);
 		chat.addEventListener(events.CHATEASE_USER, onUser);
@@ -348,15 +350,15 @@ _eventMapping = {
 				name: 'def'
 			}
 		});
-		
+
 		function onInfo(e) {
 			users.innerText = e.channel.total;
 		}
-		
+
 		function onUser(e) {
 			users.innerText = e.channel.total;
 		}
-		
+
 		function onClose(e) {
 			users.innerText = 0;
 		}
