--- a/cms/v1.html
+++ b/cms/v1.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
 	<title>CMS API Test</title>
-	
+
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="" />
 	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
-	
+	<meta name="author" content="Spencer Lau" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-	<meta content="yes" name="apple-touch-fullscreen"/>
-	<meta content="telephone=no,email=no" name="format-detection"/>
-	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
-	
+	<meta content="yes" name="apple-mobile-web-app-capable" />
+	<meta content="yes" name="apple-touch-fullscreen" />
+	<meta content="telephone=no,email=no" name="format-detection" />
+	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes" />
+
 	<link rel="shortcut icon" href="image/favicon.ico">
-	
+
 	<!--[if lt IE 9]>
 	<script type='text/javascript'>
 		(function() {
@@ -38,9 +39,9 @@
 		}
 	</style>
 	<![endif]-->
-	
+
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
-	
+
 	<script type='text/javascript' src='js/playease.min.js'></script>
 	<!--<script type='text/javascript' src='js/cn/studease/playease.js'></script>
 	<script type='text/javascript' src='js/cn/studease/utils/playease.utils.js'></script>
@@ -105,43 +106,44 @@
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.config.js'></script>
 	<script type='text/javascript' src='js/cn/studease/embed/playease.embed.embedder.js'></script>-->
 </head>
+
 <body ontouchstart=''>
 	<div class='wrap'>
 		<div class='video-container'>
-		<section>
-			<div class='toolbar'>
-				<span class='btn play' onclick='playAllChannels()'></span>
-				<span class='btn stop' onclick='stopAllChannels()'></span>
-				<span class='sep'></span>
-				<span class='btn col-1' onclick='setColumns(1)'></span>
-				<span class='btn col-4' onclick='setColumns(4)'></span>
-				<span class='btn col-9' onclick='setColumns(9)'></span>
-			</div><br/>
-			
-			<ul class='col-4' id='video-list'></ul>
-		</section>
+			<section>
+				<div class='toolbar'>
+					<span class='btn play' onclick='playAllChannels()'></span>
+					<span class='btn stop' onclick='stopAllChannels()'></span>
+					<span class='sep'></span>
+					<span class='btn col-1' onclick='setColumns(1)'></span>
+					<span class='btn col-4' onclick='setColumns(4)'></span>
+					<span class='btn col-9' onclick='setColumns(9)'></span>
+				</div><br />
+
+				<ul class='col-4' id='video-list'></ul>
+			</section>
 		</div>
 	</div>
-	
+
 	<script type='text/javascript'>
 		var utils = playease.utils,
 			events = playease.events;
-		
+
 		var players = [];
 		var ul = document.getElementById('video-list');
-		
+
 		initChannels();
-		
+
 		function initChannels() {
 			for (var j = 0; j < 4; j++) {
 				var li = utils.createElement('li');
 				li.innerHTML = '<span id="player' + j + '"></span>';
 				ul.appendChild(li);
-				
+
 				initPlayer('player' + j, 'http://127.0.0.1/live/_definst_/stream02.flv');
 			}
 		}
-		
+
 		function initPlayer(id, url) {
 			var player = playease(id);
 			player.addEventListener(events.PLAYEASE_PLAYING, onPlay);
@@ -172,17 +174,17 @@
 					swf: '../swf/playease.swf'
 				}
 			});
-			
+
 			function onPlay(e) {
 				var timer = new utils.timer(15000, 1);
 				timer.addEventListener(events.PLAYEASE_TIMER, onTimer);
 				// timer.start();
 			}
-			
+
 			function onTimer(e) {
 				player.stop();
 			}
-			
+
 			function onFullpage(e) {
 				var w = document.getElementById(id).parentElement;
 				w.style.margin = e.exit ? '' : '4px 0 0 0';
@@ -190,30 +192,30 @@
 				w.style.height = e.exit ? '' : ul.clientWidth * 0.5625 + 'px';
 				w.style.position = e.exit ? '' : 'absolute';
 				w.style.zIndex = e.exit ? '' : '99';
-				
+
 				player.resize();
 			}
-			
+
 			players.push(player);
 		}
-		
+
 		function playAllChannels(e) {
 			for (var i = 0; i < players.length; i++) {
 				var player = players[i];
 				player.play();
 			}
 		}
-		
+
 		function stopAllChannels(e) {
 			for (var i = 0; i < players.length; i++) {
 				var player = players[i];
 				player.stop();
 			}
 		}
-		
+
 		function setColumns(n) {
 			ul.className = 'col-' + n;
-			
+
 			for (var i = 0; i < players.length; i++) {
 				var player = players[i];
 				player.resize();
