--- a/slicease.html
+++ b/slicease.html
@@ -1,22 +1,23 @@
 ﻿<!DOCTYPE HTML>
 <html>
+
 <head>
 	<title>slicease.js - StudEase.cn</title>
-	
+
 	<meta charset="utf-8">
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="slicease.js,webgl,3d,图片轮播" />
 	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
-	
+	<meta name="author" content="Spencer Lau" />
+
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
-	<meta content="yes" name="apple-mobile-web-app-capable"/>
-	<meta content="yes" name="apple-touch-fullscreen"/>
-	<meta content="telephone=no,email=no" name="format-detection"/>
-	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes"/>
-	
+	<meta content="yes" name="apple-mobile-web-app-capable" />
+	<meta content="yes" name="apple-touch-fullscreen" />
+	<meta content="telephone=no,email=no" name="format-detection" />
+	<meta name="App-Config" content="fullscreen=yes, useHistoryState=yes, transition=yes" />
+
 	<link rel="shortcut icon" href="images/favicon.ico">
-	
+
 	<!--[if lt IE 9]>
 	<script type='text/javascript'>
 		(function() {
@@ -38,91 +39,92 @@
 		}
 	</style>
 	<![endif]-->
-	
+
 	<link type='text/css' rel='stylesheet' href='css/style.css' />
 	<link type='text/css' rel='stylesheet' href='css/prettify.min.css' />
-	
+
 	<script type='text/javascript' src='js/prettify/min/prettify.min.js'></script>
 </head>
+
 <body ontouchstart=''>
 	<header>
 		<div class='topbar'>
-		<section>
-			<ul class='info'>
-				<li><span class='icon-card'>Name: Tony Lau</span></li>
-				<li><span class='icon-phone'>Phone: +8618224088983</span></li>
-				<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-				<li><span class='icon-address'>Address: Chongqing, China</span></li>
-			</ul>
-		</section>
+			<section>
+				<ul class='info'>
+					<li><span class='icon-card'>Name: Spencer Lau</span></li>
+					<li><span class='icon-phone'>Phone: +8618224088983</span></li>
+					<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
+					<li><span class='icon-address'>Address: Guangzhou, China</span></li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<nav>
-		<section>
-			<span class='logo'>
-				<a href='.' title='studease.cn'>StudEase</a>
-			</span>
-			
-			<div class='menu-toggle'></div>
-			
-			<ul>
-				<li><a href='.'>HOME</a></li>
-				<li><a href='about.html'>ABOUT</a></li>
-				<li><a href='index.html#news'>NEWS</a></li>
-				<li><a href='solutions.html'>SOLUTIONS</a></li>
-				<li class='current'>
-					<a href='#'>PROJECTS</a>
-					<ul>
-						<li><a href='rtmpmate.html'>rtmpmate</a></li>
-						<li><a href='playease.html'>playease.js</a></li>
-						<li><a href='chatease.html'>chatease.js</a></li>
-						<li><a href='slicease.html'>slicease.js</a></li>
-					</ul>
-				</li>
-				<li><a href='contact.html'>CONTACT</a></li>
-				<li><a href='blog.html'>BLOG</a></li>
-			</ul>
-		</section>
+			<section>
+				<span class='logo'>
+					<a href='.' title='studease.cn'>StudEase</a>
+				</span>
+
+				<div class='menu-toggle'></div>
+
+				<ul>
+					<li><a href='.'>HOME</a></li>
+					<li><a href='about.html'>ABOUT</a></li>
+					<li><a href='index.html#news'>NEWS</a></li>
+					<li><a href='solutions.html'>SOLUTIONS</a></li>
+					<li class='current'>
+						<a href='#'>PROJECTS</a>
+						<ul>
+							<li><a href='rtmpmate.html'>rtmpmate</a></li>
+							<li><a href='playease.html'>playease.js</a></li>
+							<li><a href='chatease.html'>chatease.js</a></li>
+							<li><a href='slicease.html'>slicease.js</a></li>
+						</ul>
+					</li>
+					<li><a href='contact.html'>CONTACT</a></li>
+					<li><a href='blog.html'>BLOG</a></li>
+				</ul>
+			</section>
 		</nav>
 	</header>
-	
+
 	<div class='wrap'>
 		<div>
-		<section>
-			<h2>slicease.js</h2>
-			<p>
-				[source] <a href='https://github.com/studease/slicease' target='_blank'>https://github.com/studease/slicease</a><br/>
-				[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a><br/>
-				公众号：STUDEASE<br/>
-				QQ群：528109813<br/>
-				Skype: live:670292548
-			</p>
-			
-			<p>
-				This is a 3D image rotator using WebGL.
-			</p>
-			
-			<h3>News</h3>
-			<ul class='u5 square'>
-				<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
-				<li><a href='slicease.html'>Slicease.js</a> 3.0 released: Using WebGL.<i> - Feb. 20, 2017</i></li>
-				<li><a href='slicease.html'>Slicease.js</a> 2.0 released: New features, e.g. MVC, event-driven, etc.<i> - Dec. 30, 2015</i></li>
-				<li>
-					<a href='slicease.html'>Slicease.js</a> won a glory of <b>"22 Best Weekly Web Design & Development Resources"</b> at 
-					<a href='http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html' target='_blank'>jqueryscript.net</a>, 
-					<a href='http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8' target='_blank'>techinfine.com</a>, 
-					<a href='http://www.open-open.com/news/view/19e9ce8' target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i>
-				</li>
-				<li><a href='slicease.html'>Slicease.js</a>, which is a 3D image rotator, 1.0 released.<i> - Sep. 28, 2014</i></li>
-			</ul>
-			
-			<h3>Example</h3>
-			<p>
-				The example below will find the element with an id of "slicer" and render a slicer into it.
-			</p>
+			<section>
+				<h2>slicease.js</h2>
+				<p>
+					[source] <a href='https://github.com/studease/slicease' target='_blank'>https://github.com/studease/slicease</a><br />
+					[中文] <a href='http://blog.csdn.net/icysky1989/article/details/39624155' target='_blank'>http://blog.csdn.net/icysky1989/article/details/39624155</a><br />
+					公众号：STUDEASE<br />
+					QQ群：528109813<br />
+					Skype: live:670292548
+				</p>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<p>
+					This is a 3D image rotator using WebGL.
+				</p>
+
+				<h3>News</h3>
+				<ul class='u5 square'>
+					<li>Added UI controls for <a href='slicease.html'>slicease.js</a> at version 3.0.07.<i> - Jul. 27, 2018</i></li>
+					<li><a href='slicease.html'>Slicease.js</a> 3.0 released: Using WebGL.<i> - Feb. 20, 2017</i></li>
+					<li><a href='slicease.html'>Slicease.js</a> 2.0 released: New features, e.g. MVC, event-driven, etc.<i> - Dec. 30, 2015</i></li>
+					<li>
+						<a href='slicease.html'>Slicease.js</a> won a glory of <b>"22 Best Weekly Web Design & Development Resources"</b> at
+						<a href='http://www.jqueryscript.net/blog/Weekly-Web-Design-Development-News-Collective-59.html' target='_blank'>jqueryscript.net</a>,
+						<a href='http://www.techinfine.com/Post/177077/22-Best-Weekly-Web-Design-Development-Resources-8' target='_blank'>techinfine.com</a>,
+						<a href='http://www.open-open.com/news/view/19e9ce8' target='_blank'>open-open.com</a>, etc.<i> - Nov. 25, 2014</i>
+					</li>
+					<li><a href='slicease.html'>Slicease.js</a>, which is a 3D image rotator, 1.0 released.<i> - Sep. 28, 2014</i></li>
+				</ul>
+
+				<h3>Example</h3>
+				<p>
+					The example below will find the element with an id of "slicer" and render a slicer into it.
+				</p>
+
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 slicease('slicer').setup({
     width: 1000,
     height: 460,
@@ -148,14 +150,14 @@ slicease('slicer').setup({
     distance: 12
 });
 </pre>
-<br/>
+				<br />
 
-			<p>
-				For more configurations, please check cn/studease/embed/slicease.embed.config.js.
-			</p>
+				<p>
+					For more configurations, please check cn/studease/embed/slicease.embed.config.js.
+				</p>
 
-<?prettify lang=js linenums=true?>
-<pre class='prettyprint'>
+				<?prettify lang=js linenums=true?>
+				<pre class='prettyprint'>
 _defaults = {
     width: 640,
     height: 360,
@@ -180,62 +182,62 @@ _defaults = {
     }
 }
 </pre>
-<br/>
+				<br />
 
-			<h3>Modify</h3>
-			<p>
-				Please check the test/index.html for scripts sequence.
-			</p>
-			
-			<h3>Software License</h3>
-			<ul class='u5 square'>
-				<li><a href='https://github.com/studease/slicease/blob/master/LICENSE' target='_blank'>MIT</a></li>
-			</ul>
-		</section>
+				<h3>Modify</h3>
+				<p>
+					Please check the test/index.html for scripts sequence.
+				</p>
+
+				<h3>Software License</h3>
+				<ul class='u5 square'>
+					<li><a href='https://github.com/studease/slicease/blob/master/LICENSE' target='_blank'>MIT</a></li>
+				</ul>
+			</section>
 		</div>
 	</div>
-	
+
 	<footer>
 		<div class='footerall'>
-		<section>
-			<ul>
-				<li>
-					<a href='faq.html' target='_blank'>
-						<strong>FAQ</strong>
-						<span>Check for the articles<br/>and known issues</span>
-					</a>
-				</li>
-				<li>
-					<a href='solutions.html' target='_blank'>
-						<strong>SOLUTIONS</strong>
-						<span>Low latency and<br/>cross-platform</span>
-					</a>
-				</li>
-				<li>
-					<a href='contact.html' target='_blank'>
-						<strong>CONTACT</strong>
-						<span>+8618224088983<br/>670292548@qq.com</span>
-					</a>
-				</li>
-				<li>
-					<a href='donate.html' target='_blank'>
-						<strong>DONATE</strong>
-						<span>Contribute by<br/>making a donation ￥</span>
-					</a>
-				</li>
-			</ul>
-		</section>
+			<section>
+				<ul>
+					<li>
+						<a href='faq.html' target='_blank'>
+							<strong>FAQ</strong>
+							<span>Check for the articles<br />and known issues</span>
+						</a>
+					</li>
+					<li>
+						<a href='solutions.html' target='_blank'>
+							<strong>SOLUTIONS</strong>
+							<span>Low latency and<br />cross-platform</span>
+						</a>
+					</li>
+					<li>
+						<a href='contact.html' target='_blank'>
+							<strong>CONTACT</strong>
+							<span>+8618224088983<br />670292548@qq.com</span>
+						</a>
+					</li>
+					<li>
+						<a href='donate.html' target='_blank'>
+							<strong>DONATE</strong>
+							<span>Contribute by<br />making a donation ￥</span>
+						</a>
+					</li>
+				</ul>
+			</section>
 		</div>
-		
+
 		<div class='copyright'>
-		<section>
-			<span>Copyright &copy; 2014-2018 studease.cn | All Rights Reserved</span>
-		</section>
+			<section>
+				<span>Copyright &copy; 2014-2021 studease.cn | All Rights Reserved</span>
+			</section>
 		</div>
 	</footer>
-	
+
 	<script type='text/javascript'>
-		window.onload = function() {
+		window.onload = function () {
 			prettyPrint();
 		};
 	</script>
