--- a/solutions.html
+++ b/solutions.html
@@ -8,7 +8,7 @@
 	<meta name="robots" content="index, follow" />
 	<meta name="keywords" content="rtmpmate,playease.js,chatease.js,微信直播,弹幕直播" />
 	<meta name="description" content="" />
-	<meta name="author" content="Tony Lau" />
+	<meta name="author" content="Spencer Lau" />
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no">
 	<meta content="yes" name="apple-mobile-web-app-capable" />
@@ -58,10 +58,10 @@
 		<div class='topbar'>
 			<section>
 				<ul class='info'>
-					<li><span class='icon-card'>Name: Tony Lau</span></li>
+					<li><span class='icon-card'>Name: Spencer Lau</span></li>
 					<li><span class='icon-phone'>Phone: +8618224088983</span></li>
 					<li><span class='icon-email'>Email: 670292548@qq.com</span></li>
-					<li><span class='icon-address'>Address: Chongqing, China</span></li>
+					<li><span class='icon-address'>Address: Guangzhou, China</span></li>
 				</ul>
 			</section>
 		</div>
@@ -222,7 +222,7 @@
 
 		<div class='copyright'>
 			<section>
-				<span>Copyright &copy; 2014-2018 studease.cn | All Rights Reserved</span>
+				<span>Copyright &copy; 2014-2021 studease.cn | All Rights Reserved</span>
 			</section>
 		</div>
 	</footer>
